[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/SeedCard.png" type="Texture" id=1]
[ext_resource path="res://Common/Res/Fonts/NunitoSans-32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Common/Res/Fonts/NunitoSans-28.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Sprites/Seeds/Carrot.png" type="Texture" id=4]
[ext_resource path="res://Common/Res/Cards/SeedCard.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97.5, 128 )

[node name="SeedCard" type="Area2D" groups=["Card", "Seed"]]
script = ExtResource( 5 )

[node name="Card" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[node name="Name" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_top = -132.0
margin_right = 69.0
margin_bottom = -84.0
custom_fonts/font = ExtResource( 2 )
text = "Corn"
align = 1
valign = 1

[node name="Cost" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.0
margin_top = -130.0
margin_right = -59.0
margin_bottom = -88.0
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1
valign = 1

[node name="Time" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = 48.0
margin_right = -24.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Health" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 28.0
margin_top = 49.0
margin_right = 75.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 0, -34 )
texture = ExtResource( 4 )

[connection signal="input_event" from="." to="." method="_on_SeedCard_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_SeedCard_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SeedCard_mouse_exited"]
